# pixel-carriersettings-extractor

./: .gitignore  README.md  compile_web_dashboard.py  diff_carrier_settings.py  extract_all.py  extract_carrier_settings.py  extract_cfg_db.py  extract_uecaps.py  main.py  pyproject.toml  task.md
.github/workflows/: deploy.yml  release.yml
docs/: app.js  carrier_data.pb  dashboard.proto  data.js  index.css  index.html
extracted/: index.css
extracted/android_16_2026_04_cp1a.260405.005/: index.html
extracted/android_16_2026_04_cp1a.260405.005/uecaps/markdown/: 3_UK.md  EE.md  O2_UK.md  (+1 more)
extracted/android_16_2026_05_cp1a.260505.005/: index.html
extracted/android_17_2026_06_cp2a.260605.012/: index.html
extracted/android_17_2026_07_cp2a.260705.006/: index.html
extracted/android_17_july_2026_cp2a.260705.006/: index.html
extracted_carrier_settings/android_17_july_2026_pixel_10_pro_row/: asda_gb.pb  btb_gb.pb  btc_gb.pb  cloud9_gb.pb  ee_gb.pb  esimgo_gb.pb  esn_gb.pb  gamma_gb.pb  giffgaff_gb.pb  gigs_gb.pb  h3_gb.pb  idmobile_gb.pb  jt_gb.pb  lebara_gb.pb  lycamobile_gb.pb  o2postpaid_gb.pb  o2prepaid_gb.pb  sky_gb.pb  smarty_gb.pb  spitfire_gb.pb  spusu_gb.pb  superdrug_gb.pb  talkmobile_gb.pb  tcl_gb.pb  tesco_gb.pb  virgin_gb.pb  vodafone_gb.pb
extracted_carrier_settings/android_17_july_2026_pixel_10a_row/: asda_gb.pb  asda_gb.toml  btb_gb.pb  btb_gb.toml  btc_gb.pb  btc_gb.toml  carrier_list.pb  cloud9_gb.pb  cloud9_gb.toml  ee_gb.pb  ee_gb.toml  esimgo_gb.pb  esimgo_gb.toml  esn_gb.pb  esn_gb.toml  gamma_gb.pb  gamma_gb.toml  giffgaff_gb.pb  giffgaff_gb.toml  gigs_gb.pb  gigs_gb.toml  h3_gb.pb  h3_gb.toml  idmobile_gb.pb  idmobile_gb.toml  jt_gb.pb  jt_gb.toml  lebara_gb.pb  lebara_gb.toml  lycamobile_gb.pb  lycamobile_gb.toml  o2postpaid_gb.pb  o2postpaid_gb.toml  o2prepaid_gb.pb  o2prepaid_gb.toml  sky_gb.pb  sky_gb.toml  smarty_gb.pb  smarty_gb.toml  spitfire_gb.pb  (+15 more)
pixel_carriersettings_extractor/: __init__.py  common.py  compile_web_dashboard.py  diff_carrier_settings.py  extract_all.py  extract_carrier_settings.py  extract_cfg_db.py  extract_uecaps.py
pixel_extractor/: cli.py  common.py  compiler.py  differ.py  extractor.py
tests/: test_compiler.py
(+613 files in other folders)
