[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixel-carriersettings-extractor"
version = "1.0.0"
description = "Extract and analyze carrier settings and UE capabilities from Pixel factory images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ext4",
]

[project.scripts]
pixel-extractor = "pixel_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pixel_extractor"]
