[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixel-carriersettings-extractor"
version = "1.0.0"
description = "Extract and analyze carrier settings and UE capabilities from Pixel factory images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ext4",
    "dominate",
]

[project.scripts]
pixel-extractor = "pixel_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pixel_extractor"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade (modernize syntax)
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

